--- a/pom.xml
+++ b/pom.xml
@@ -52,10 +52,10 @@
             <artifactId>jersey-media-moxy</artifactId>
         </dependency>
         
-         <dependency>
-		    <groupId>com.fasterxml.jackson.core</groupId>
-		    <artifactId>jackson-databind</artifactId>
-		    <version>2.9.2</version>
+		<dependency>
+		  <groupId>com.fasterxml.jackson.core</groupId>
+		  <artifactId>jackson-databind</artifactId>
+		  <version>[2.9.8,)</version>
 		</dependency>
 		
 		<dependency>
